src/antlr/GramaticaParser.java
// Generated from Gramatica.g4 by ANTLR 4.7.2

    package antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AP=1, FP=2, AC=3, FC=4, ASP=5, DEL=6, VAR=7, ATR=8, IN=9, OUT=10, CSTR=11, 
		TIPO=12, FUN=13, CALL=14, MAIN=15, RET=16, OPLOGI=17, OPARIT=18, OPREL=19, 
		WHI=20, IF=21, THEN=22, ELSE=23, ID=24, NUM=25, WS=26, COM=27;
	public static final int
		RULE_inicio = 0, RULE_declaracao_main = 1, RULE_declaracao_func = 2, RULE_declaracao_vars = 3, 
		RULE_declaracao_var_uni = 4, RULE_chamada_func = 5, RULE_chamada_funcSemPV = 6, 
		RULE_acao = 7, RULE_estruturas = 8, RULE_operacao_relacional = 9, RULE_operacao_logica = 10, 
		RULE_operacao_aritmetica = 11, RULE_condicional_senao = 12, RULE_condicional = 13, 
		RULE_operando = 14, RULE_repeticao = 15, RULE_atribuicao = 16, RULE_entrada_dados = 17, 
		RULE_saida_dados = 18, RULE_algoritmo = 19, RULE_retorno_de_funcao = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "declaracao_main", "declaracao_func", "declaracao_vars", "declaracao_var_uni", 
			"chamada_func", "chamada_funcSemPV", "acao", "estruturas", "operacao_relacional", 
			"operacao_logica", "operacao_aritmetica", "condicional_senao", "condicional", 
			"operando", "repeticao", "atribuicao", "entrada_dados", "saida_dados", 
			"algoritmo", "retorno_de_funcao"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'{'", "'}'", "'\"'", "';'", "'vars'", "'='", "'in'", 
			"'out'", null, null, "'func'", "'call'", "'main'", "'return'", null, 
			null, null, "'while'", "'if'", "'then'", "'else'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AP", "FP", "AC", "FC", "ASP", "DEL", "VAR", "ATR", "IN", "OUT", 
			"CSTR", "TIPO", "FUN", "CALL", "MAIN", "RET", "OPLOGI", "OPARIT", "OPREL", 
			"WHI", "IF", "THEN", "ELSE", "ID", "NUM", "WS", "COM"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InicioContext extends ParserRuleContext {
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
	 
		public InicioContext() { }
		public void copyFrom(InicioContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NInicioContext extends InicioContext {
		public Declaracao_mainContext declaracao_main() {
			return getRuleContext(Declaracao_mainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GramaticaParser.EOF, 0); }
		public Declaracao_funcContext declaracao_func() {
			return getRuleContext(Declaracao_funcContext.class,0);
		}
		public NInicioContext(InicioContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterNInicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitNInicio(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		try {
			_localctx = new NInicioContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(42);
				declaracao_func();
				}
				break;
			}
			setState(45);
			declaracao_main();
			setState(46);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracao_mainContext extends ParserRuleContext {
		public Declaracao_mainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_main; }
	 
		public Declaracao_mainContext() { }
		public void copyFrom(Declaracao_mainContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BlocoDeclaracaoMainContext extends Declaracao_mainContext {
		public TerminalNode FUN() { return getToken(GramaticaParser.FUN, 0); }
		public TerminalNode TIPO() { return getToken(GramaticaParser.TIPO, 0); }
		public TerminalNode MAIN() { return getToken(GramaticaParser.MAIN, 0); }
		public TerminalNode AP() { return getToken(GramaticaParser.AP, 0); }
		public TerminalNode FP() { return getToken(GramaticaParser.FP, 0); }
		public TerminalNode AC() { return getToken(GramaticaParser.AC, 0); }
		public Declaracao_varsContext declaracao_vars() {
			return getRuleContext(Declaracao_varsContext.class,0);
		}
		public AlgoritmoContext algoritmo() {
			return getRuleContext(AlgoritmoContext.class,0);
		}
		public TerminalNode FC() { return getToken(GramaticaParser.FC, 0); }
		public BlocoDeclaracaoMainContext(Declaracao_mainContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterBlocoDeclaracaoMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitBlocoDeclaracaoMain(this);
		}
	}

	public final Declaracao_mainContext declaracao_main() throws RecognitionException {
		Declaracao_mainContext _localctx = new Declaracao_mainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracao_main);
		try {
			_localctx = new BlocoDeclaracaoMainContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(FUN);
			setState(49);
			match(TIPO);
			setState(50);
			match(MAIN);
			setState(51);
			match(AP);
			setState(52);
			match(FP);
			setState(53);
			match(AC);
			setState(54);
			declaracao_vars();
			setState(55);
			algoritmo();
			setState(56);
			match(FC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracao_funcContext extends ParserRuleContext {
		public Declaracao_funcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_func; }
	 
		public Declaracao_funcContext() { }
		public void copyFrom(Declaracao_funcContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BlocoDeclaracaoFuncContext extends Declaracao_funcContext {
		public TerminalNode FUN() { return getToken(GramaticaParser.FUN, 0); }
		public List<TerminalNode> TIPO() { return getTokens(GramaticaParser.TIPO); }
		public TerminalNode TIPO(int i) {
			return getToken(GramaticaParser.TIPO, i);
		}
		public List<TerminalNode> ID() { return getTokens(GramaticaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GramaticaParser.ID, i);
		}
		public TerminalNode AP() { return getToken(GramaticaParser.AP, 0); }
		public TerminalNode FP() { return getToken(GramaticaParser.FP, 0); }
		public TerminalNode AC() { return getToken(GramaticaParser.AC, 0); }
		public Declaracao_varsContext declaracao_vars() {
			return getRuleContext(Declaracao_varsContext.class,0);
		}
		public AlgoritmoContext algoritmo() {
			return getRuleContext(AlgoritmoContext.class,0);
		}
		public TerminalNode FC() { return getToken(GramaticaParser.FC, 0); }
		public BlocoDeclaracaoFuncContext(Declaracao_funcContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterBlocoDeclaracaoFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitBlocoDeclaracaoFunc(this);
		}
	}

	public final Declaracao_funcContext declaracao_func() throws RecognitionException {
		Declaracao_funcContext _localctx = new Declaracao_funcContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracao_func);
		int _la;
		try {
			_localctx = new BlocoDeclaracaoFuncContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(FUN);
			setState(59);
			match(TIPO);
			setState(60);
			match(ID);
			setState(61);
			match(AP);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TIPO) {
				{
				{
				setState(62);
				match(TIPO);
				setState(63);
				match(ID);
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(69);
			match(FP);
			setState(70);
			match(AC);
			setState(71);
			declaracao_vars();
			setState(72);
			algoritmo();
			setState(73);
			match(FC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracao_varsContext extends ParserRuleContext {
		public Declaracao_varsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_vars; }
	 
		public Declaracao_varsContext() { }
		public void copyFrom(Declaracao_varsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BlocoDeclaracaoVarsContext extends Declaracao_varsContext {
		public TerminalNode VAR() { return getToken(GramaticaParser.VAR, 0); }
		public TerminalNode AC() { return getToken(GramaticaParser.AC, 0); }
		public TerminalNode FC() { return getToken(GramaticaParser.FC, 0); }
		public List<Declaracao_var_uniContext> declaracao_var_uni() {
			return getRuleContexts(Declaracao_var_uniContext.class);
		}
		public Declaracao_var_uniContext declaracao_var_uni(int i) {
			return getRuleContext(Declaracao_var_uniContext.class,i);
		}
		public BlocoDeclaracaoVarsContext(Declaracao_varsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterBlocoDeclaracaoVars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitBlocoDeclaracaoVars(this);
		}
	}

	public final Declaracao_varsContext declaracao_vars() throws RecognitionException {
		Declaracao_varsContext _localctx = new Declaracao_varsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracao_vars);
		int _la;
		try {
			_localctx = new BlocoDeclaracaoVarsContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(75);
				match(VAR);
				setState(76);
				match(AC);
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==TIPO) {
					{
					{
					setState(77);
					declaracao_var_uni();
					}
					}
					setState(82);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(83);
				match(FC);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracao_var_uniContext extends ParserRuleContext {
		public Declaracao_var_uniContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_var_uni; }
	 
		public Declaracao_var_uniContext() { }
		public void copyFrom(Declaracao_var_uniContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BlocoDeclaracaoVarUniContext extends Declaracao_var_uniContext {
		public TerminalNode TIPO() { return getToken(GramaticaParser.TIPO, 0); }
		public TerminalNode ID() { return getToken(GramaticaParser.ID, 0); }
		public TerminalNode DEL() { return getToken(GramaticaParser.DEL, 0); }
		public BlocoDeclaracaoVarUniContext(Declaracao_var_uniContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterBlocoDeclaracaoVarUni(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitBlocoDeclaracaoVarUni(this);
		}
	}

	public final Declaracao_var_uniContext declaracao_var_uni() throws RecognitionException {
		Declaracao_var_uniContext _localctx = new Declaracao_var_uniContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaracao_var_uni);
		try {
			_localctx = new BlocoDeclaracaoVarUniContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(TIPO);
			setState(87);
			match(ID);
			setState(88);
			match(DEL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Chamada_funcContext extends ParserRuleContext {
		public Chamada_funcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chamada_func; }
	 
		public Chamada_funcContext() { }
		public void copyFrom(Chamada_funcContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ChamadaFuncContext extends Chamada_funcContext {
		public TerminalNode CALL() { return getToken(GramaticaParser.CALL, 0); }
		public TerminalNode FUN() { return getToken(GramaticaParser.FUN, 0); }
		public List<TerminalNode> ID() { return getTokens(GramaticaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GramaticaParser.ID, i);
		}
		public TerminalNode AP() { return getToken(GramaticaParser.AP, 0); }
		public TerminalNode FP() { return getToken(GramaticaParser.FP, 0); }
		public TerminalNode DEL() { return getToken(GramaticaParser.DEL, 0); }
		public List<Operacao_aritmeticaContext> operacao_aritmetica() {
			return getRuleContexts(Operacao_aritmeticaContext.class);
		}
		public Operacao_aritmeticaContext operacao_aritmetica(int i) {
			return getRuleContext(Operacao_aritmeticaContext.class,i);
		}
		public List<Operacao_relacionalContext> operacao_relacional() {
			return getRuleContexts(Operacao_relacionalContext.class);
		}
		public Operacao_relacionalContext operacao_relacional(int i) {
			return getRuleContext(Operacao_relacionalContext.class,i);
		}
		public List<Operacao_logicaContext> operacao_logica() {
			return getRuleContexts(Operacao_logicaContext.class);
		}
		public Operacao_logicaContext operacao_logica(int i) {
			return getRuleContext(Operacao_logicaContext.class,i);
		}
		public ChamadaFuncContext(Chamada_funcContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterChamadaFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitChamadaFunc(this);
		}
	}

	public final Chamada_funcContext chamada_func() throws RecognitionException {
		Chamada_funcContext _localctx = new Chamada_funcContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_chamada_func);
		int _la;
		try {
			_localctx = new ChamadaFuncContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(CALL);
			setState(91);
			match(FUN);
			setState(92);
			match(ID);
			setState(93);
			match(AP);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID || _la==NUM) {
				{
				setState(98);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(94);
					match(ID);
					}
					break;
				case 2:
					{
					setState(95);
					operacao_aritmetica();
					}
					break;
				case 3:
					{
					setState(96);
					operacao_relacional();
					}
					break;
				case 4:
					{
					setState(97);
					operacao_logica();
					}
					break;
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103);
			match(FP);
			setState(104);
			match(DEL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Chamada_funcSemPVContext extends ParserRuleContext {
		public Chamada_funcSemPVContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chamada_funcSemPV; }
	 
		public Chamada_funcSemPVContext() { }
		public void copyFrom(Chamada_funcSemPVContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ChamadaFuncSemPVContext extends Chamada_funcSemPVContext {
		public TerminalNode CALL() { return getToken(GramaticaParser.CALL, 0); }
		public TerminalNode FUN() { return getToken(GramaticaParser.FUN, 0); }
		public List<TerminalNode> ID() { return getTokens(GramaticaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GramaticaParser.ID, i);
		}
		public TerminalNode AP() { return getToken(GramaticaParser.AP, 0); }
		public TerminalNode FP() { return getToken(GramaticaParser.FP, 0); }
		public List<Operacao_aritmeticaContext> operacao_aritmetica() {
			return getRuleContexts(Operacao_aritmeticaContext.class);
		}
		public Operacao_aritmeticaContext operacao_aritmetica(int i) {
			return getRuleContext(Operacao_aritmeticaContext.class,i);
		}
		public List<Operacao_relacionalContext> operacao_relacional() {
			return getRuleContexts(Operacao_relacionalContext.class);
		}
		public Operacao_relacionalContext operacao_relacional(int i) {
			return getRuleContext(Operacao_relacionalContext.class,i);
		}
		public List<Operacao_logicaContext> operacao_logica() {
			return getRuleContexts(Operacao_logicaContext.class);
		}
		public Operacao_logicaContext operacao_logica(int i) {
			return getRuleContext(Operacao_logicaContext.class,i);
		}
		public ChamadaFuncSemPVContext(Chamada_funcSemPVContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterChamadaFuncSemPV(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitChamadaFuncSemPV(this);
		}
	}

	public final Chamada_funcSemPVContext chamada_funcSemPV() throws RecognitionException {
		Chamada_funcSemPVContext _localctx = new Chamada_funcSemPVContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_chamada_funcSemPV);
		int _la;
		try {
			_localctx = new ChamadaFuncSemPVContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(CALL);
			setState(107);
			match(FUN);
			setState(108);
			match(ID);
			setState(109);
			match(AP);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID || _la==NUM) {
				{
				setState(114);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(110);
					match(ID);
					}
					break;
				case 2:
					{
					setState(111);
					operacao_aritmetica();
					}
					break;
				case 3:
					{
					setState(112);
					operacao_relacional();
					}
					break;
				case 4:
					{
					setState(113);
					operacao_logica();
					}
					break;
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(119);
			match(FP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AcaoContext extends ParserRuleContext {
		public AcaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_acao; }
	 
		public AcaoContext() { }
		public void copyFrom(AcaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NAcaoContext extends AcaoContext {
		public Entrada_dadosContext entrada_dados() {
			return getRuleContext(Entrada_dadosContext.class,0);
		}
		public Saida_dadosContext saida_dados() {
			return getRuleContext(Saida_dadosContext.class,0);
		}
		public Operacao_logicaContext operacao_logica() {
			return getRuleContext(Operacao_logicaContext.class,0);
		}
		public Chamada_funcContext chamada_func() {
			return getRuleContext(Chamada_funcContext.class,0);
		}
		public Retorno_de_funcaoContext retorno_de_funcao() {
			return getRuleContext(Retorno_de_funcaoContext.class,0);
		}
		public NAcaoContext(AcaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterNAcao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitNAcao(this);
		}
	}

	public final AcaoContext acao() throws RecognitionException {
		AcaoContext _localctx = new AcaoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_acao);
		try {
			_localctx = new NAcaoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IN:
				{
				setState(121);
				entrada_dados();
				}
				break;
			case OUT:
				{
				setState(122);
				saida_dados();
				}
				break;
			case ID:
			case NUM:
				{
				setState(123);
				operacao_logica();
				}
				break;
			case CALL:
				{
				setState(124);
				chamada_func();
				}
				break;
			case RET:
				{
				setState(125);
				retorno_de_funcao();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EstruturasContext extends ParserRuleContext {
		public EstruturasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estruturas; }
	 
		public EstruturasContext() { }
		public void copyFrom(EstruturasContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NEstruturasContext extends EstruturasContext {
		public RepeticaoContext repeticao() {
			return getRuleContext(RepeticaoContext.class,0);
		}
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public AtribuicaoContext atribuicao() {
			return getRuleContext(AtribuicaoContext.class,0);
		}
		public NEstruturasContext(EstruturasContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterNEstruturas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitNEstruturas(this);
		}
	}

	public final EstruturasContext estruturas() throws RecognitionException {
		EstruturasContext _localctx = new EstruturasContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_estruturas);
		try {
			_localctx = new NEstruturasContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WHI:
				{
				setState(128);
				repeticao();
				}
				break;
			case IF:
				{
				setState(129);
				condicional();
				}
				break;
			case ID:
				{
				setState(130);
				atribuicao();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operacao_relacionalContext extends ParserRuleContext {
		public Operacao_relacionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacao_relacional; }
	 
		public Operacao_relacionalContext() { }
		public void copyFrom(Operacao_relacionalContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class OperacaoRelacionalContext extends Operacao_relacionalContext {
		public TerminalNode OPREL() { return getToken(GramaticaParser.OPREL, 0); }
		public List<OperandoContext> operando() {
			return getRuleContexts(OperandoContext.class);
		}
		public OperandoContext operando(int i) {
			return getRuleContext(OperandoContext.class,i);
		}
		public Operacao_relacionalContext operacao_relacional() {
			return getRuleContext(Operacao_relacionalContext.class,0);
		}
		public TerminalNode AP() { return getToken(GramaticaParser.AP, 0); }
		public TerminalNode FP() { return getToken(GramaticaParser.FP, 0); }
		public Chamada_funcSemPVContext chamada_funcSemPV() {
			return getRuleContext(Chamada_funcSemPVContext.class,0);
		}
		public OperacaoRelacionalContext(Operacao_relacionalContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterOperacaoRelacional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitOperacaoRelacional(this);
		}
	}
